--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script defer src="/bundle.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="App"></div>
 
     <!-- Many of bootstrap components require the use of JavaScript to function -->
     <!-- Popper and BootStrap JS -->
