--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe with React</title>
 
     <link
@@ -17,11 +17,10 @@
       crossorigin="anonymous"
     />
 
-    <link rel="icon" href="/4geeks.ico" />
     <script defer src="/bundle.js"></script>
   </head>
   <body>
-    <div id="App"></div>
+    <div id="root"></div>
 
     <!-- Many of bootstrap components require the use of JavaScript to function -->
     <!-- Popper and BootStrap JS -->
