--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 
     <script defer src="/bundle.js"></script>
   </head>
+
   <body>
     <div id="root"></div>
+    <div id="home"></div>
 
-    <!-- Many of bootstrap components require the use of JavaScript to function -->
-    <!-- Popper and BootStrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
