--- a/template.html
+++ b/template.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="home"></div>
 
     <!-- Many of bootstrap components require the use of JavaScript to function -->
     <!-- Popper and BootStrap JSs -->
